sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var n: Int=getNombreValeurs()
do{
  
  var swapy=false	
  for (j<- 0 to n-2){
      if (plusPetitQue(j+1,j)){
        echange(j+1,j)
        swapy=true
      }
  }
}while (swapy)
}